Closed
Bug 112215
Opened 24 years ago
Closed 24 years ago
Embedding aps (mfcembed & TestGtkEmbed) crashing on intitial page loading
Categories
(Core :: DOM: Navigation, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: tracy, Assigned: adamlock)
Details
Attachments
(1 file)
|
986 bytes,
patch
|
leaf
:
review+
shaver
:
superreview+
|
Details | Diff | Splinter Review |
seen on embed builds:
windows mfcembed 2001-11-27-06-trunk
linux TestGtkEmbed 2001-11-27-06-trunk
-install and launch the application
mfcembed immediately crashes
TestGtkEmbed brings up the browser window just fine...but when you type a URL in
and hit enter, it crashes with a seg fault.
note: I'm guessing on the component here.
nsJSEnvironment::Init is returning an error because it can't get the
nsIJVMManager service. I'm guessing this is totally horking everything from that
point onwards.
Investigating further
Regression caused by checkin by jst for bug 42321.
The code is failing in nsJSEnvironment::Init(). Code didn't used to care if it
could get a nsILiveConnectManager pointer from the nsIJVMManager service, but
now it does.
Comment 4•24 years ago
|
||
Comment on attachment 59363 [details] [diff] [review]
Patch makes LiveConnect optional
r=leaf, i'll get on jst to sr
Attachment #59363 -
Flags: review+
Comment 5•24 years ago
|
||
Comment on attachment 59363 [details] [diff] [review]
Patch makes LiveConnect optional
sr=shaver. (mmmmm, modularity)
Attachment #59363 -
Flags: superreview+
Fix is in.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 7•24 years ago
|
||
verified fixed on TestGtkEmbed 2001-11-27-12-trunk
Status: RESOLVED → VERIFIED
Keywords: smoketest
You need to log in
before you can comment on or make changes to this bug.
Description
•