Make LiveConnect optional once more. b=112215 r=leaf@mozilla.orf sr=shaver@mozilla.org